--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "awesomeproject",
+  "name": "cinemaconn",
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
@@ -9,12 +9,21 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@fortawesome/free-solid-svg-icons": "^6.5.1",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/stack": "^6.3.29",
+    "axios": "^0.21.1",
+    "bcrypt": "^5.1.1",
+    "csv-parser": "^3.0.0",
     "expo": "~50.0.14",
     "expo-status-bar": "~1.11.1",
+    "jsonwebtoken": "^9.0.2",
     "react": "18.2.0",
+    "react-bootstrap": "^2.10.2",
+    "react-confetti": "^6.1.0",
     "react-native": "0.73.6",
+    "sequelize": "^6.37.2",
     "watchman": "^1.0.0"
   },
   "devDependencies": {
