--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/stack": "^6.3.29",
+    "@reduxjs/toolkit": "^2.2.3",
     "axios": "^0.21.1",
     "bcrypt": "^5.1.1",
     "csv-parser": "^3.0.0",
@@ -23,6 +24,11 @@
     "react-bootstrap": "^2.10.2",
     "react-confetti": "^6.1.0",
     "react-native": "0.73.6",
+    "react-redux": "^9.1.0",
+    "redux": "^5.0.1",
+    "redux-devtools-extension": "^2.13.9",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^3.1.0",
     "sequelize": "^6.37.2",
     "watchman": "^1.0.0"
   },
