--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "backend": "node server",
+    "seed": "node script/seed.js"
   },
   "dependencies": {
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
@@ -14,12 +16,15 @@
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/stack": "^6.3.29",
     "@reduxjs/toolkit": "^2.2.3",
-    "axios": "^0.21.1",
+    "axios": "^0.21.4",
     "bcrypt": "^5.1.1",
+    "compression": "^1.7.4",
     "csv-parser": "^3.0.0",
     "expo": "~50.0.14",
     "expo-status-bar": "~1.11.1",
+    "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
+    "morgan": "^1.10.0",
     "react": "18.2.0",
     "react-bootstrap": "^2.10.2",
     "react-confetti": "^6.1.0",
