--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-bootstrap": "^2.10.2",
     "react-confetti": "^6.1.0",
     "react-native": "0.73.6",
+    "react-native-confetti": "^0.1.0",
     "react-redux": "^9.1.0",
     "redux": "^5.0.1",
     "redux-devtools-extension": "^2.13.9",
