--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "react-confetti": "^6.1.0",
     "react-native": "0.73.6",
     "react-native-confetti": "^0.1.0",
+    "react-native-safe-area-context": "^4.8.2",
+    "react-native-screens": "~3.29.0",
     "react-redux": "^9.1.0",
     "redux": "^5.0.1",
     "redux-devtools-extension": "^2.13.9",
