--- a/package.json
+++ b/package.json
@@ -25,11 +25,13 @@
     "expo-status-bar": "~1.11.1",
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
+    "lottie-react-native": "^6.7.2",
     "morgan": "^1.10.0",
     "react": "18.2.0",
     "react-bootstrap": "^2.10.2",
     "react-confetti": "^6.1.0",
     "react-native": "0.73.6",
+    "react-native-animatable": "^1.4.0",
     "react-native-confetti": "^0.1.0",
     "react-native-safe-area-context": "^4.8.2",
     "react-native-screens": "~3.29.0",
